--- a/manifest.json
+++ b/manifest.json
@@ -1,16 +1,18 @@
 {
-  "name": "At Work",
-  "description": "Everything you should do at work",
-  "version": "0.1",
-  "chrome_url_overrides": {
-    "newtab": "home.html"
-  },
-  "options_page": "options.html",
-  "background": { "scripts": ["background.js"] },
-   "permissions": [
-          "storage",
-          "bookmarks",
-          "notifications"
-        ],
-  "manifest_version": 2
+    "name": "At Work",
+    "description": "Everything you should do at work",
+    "version": "0.1",
+    "chrome_url_overrides": {
+        "newtab": "home.html"
+    },
+    "options_page": "options.html",
+    "background": {
+        "scripts": ["background.js"]
+    },
+    "permissions": [
+        "storage",
+        "bookmarks",
+        "notifications"
+    ],
+    "manifest_version": 2
 }
